--- a/package.json
+++ b/package.json
@@ -22,13 +22,22 @@
     "@angular/router": "^6.0.3",
     "@progress/kendo-angular-buttons": "^4.0.0",
     "@progress/kendo-angular-dialog": "^3.10.0",
+    "@progress/kendo-angular-grid": "^3.10.2",
     "@progress/kendo-angular-l10n": "^1.1.0",
     "@progress/kendo-angular-treeview": "^2.5.0",
     "@progress/kendo-theme-default": "latest",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@progress/kendo-angular-dropdowns": "2 - 3",
+    "@progress/kendo-angular-inputs": "2 - 3",
+    "@progress/kendo-angular-intl": "^1.0.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.0.0",
+    "@progress/kendo-angular-excel-export": "1 - 2",
+    "@progress/kendo-angular-dateinputs": "2 - 3",
+    "@progress/kendo-angular-popup": "^2.0.0"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
